--- a/Quartz.XP/Quartz.XP/packages.config
+++ b/Quartz.XP/Quartz.XP/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Accord" version="3.8.2-alpha" targetFramework="net40-Client" />
+  <package id="Accord.Controls" version="3.8.2-alpha" targetFramework="net40-Client" />
+  <package id="Accord.MachineLearning" version="3.8.2-alpha" targetFramework="net40-Client" />
+  <package id="Accord.Math" version="3.8.2-alpha" targetFramework="net40-Client" />
+  <package id="Accord.Statistics" version="3.8.2-alpha" targetFramework="net40-Client" />
   <package id="LiteDB" version="3.1.5" targetFramework="net40-Client" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40-Client" />
+  <package id="ZedGraph" version="5.1.7" targetFramework="net40-Client" />
 </packages>
