--- a/Quartz.XP/Quartz.XP/Quartz.XP.csproj
+++ b/Quartz.XP/Quartz.XP/Quartz.XP.csproj
@@ -42,6 +42,7 @@
       <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
