--- a/Quartz.XP/Quartz.XP/Quartz.XP.csproj
+++ b/Quartz.XP/Quartz.XP/Quartz.XP.csproj
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
+    <StartupObject>Quartz.XP.Program</StartupObject>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
+  </PropertyGroup>
+  <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
@@ -55,6 +73,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="Telerik.WinControls, Version=2015.2.728.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e" />
     <Reference Include="Telerik.WinControls.GridView, Version=2015.2.728.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
+    <Reference Include="Telerik.WinControls.RadDock, Version=2015.2.728.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
     <Reference Include="Telerik.WinControls.UI, Version=2015.2.728.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
     <Reference Include="TelerikCommon, Version=2015.2.728.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e" />
   </ItemGroup>
@@ -62,7 +81,19 @@
     <Compile Include="Controls\Accord\ArrayDataView.cs" />
     <Compile Include="Controls\Accord\ArrayPropertyDescriptor.cs" />
     <Compile Include="Controls\Accord\ArrayRowView.cs" />
+    <Compile Include="Controls\Audition.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Audition.Designer.cs">
+      <DependentUpon>Audition.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Elements\CrystalCellElement.cs" />
+    <Compile Include="Controls\Judge.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Judge.Designer.cs">
+      <DependentUpon>Judge.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Qrid.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -77,6 +108,12 @@
       <DependentUpon>Rack.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\Accord\RowNamePropertyDescriptor.cs" />
+    <Compile Include="Controls\Scale.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Scale.Designer.cs">
+      <DependentUpon>Scale.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Slab.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -95,16 +132,26 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Bundle.cs" />
     <Compile Include="Models\Cell.cs" />
     <Compile Include="Models\Poem.cs" />
     <Compile Include="Models\Puzzle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Controls\Audition.resx">
+      <DependentUpon>Audition.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Judge.resx">
+      <DependentUpon>Judge.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\Qrid.resx">
       <DependentUpon>Qrid.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\Rack.resx">
       <DependentUpon>Rack.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Scale.resx">
+      <DependentUpon>Scale.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\Slab.resx">
       <DependentUpon>Slab.cs</DependentUpon>
@@ -125,6 +172,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Data\libai.json" />
     <None Include="Data\Quartz.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -141,16 +189,31 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="License-LGPL.txt" />
+    <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4 Client Profile %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Windows.Installer.3.1">
+      <Visible>False</Visible>
+      <ProductName>Windows Installer 3.1</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ILMerge.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Accord.3.8.2-alpha\build\Accord.targets" Condition="Exists('..\packages\Accord.3.8.2-alpha\build\Accord.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Accord.3.8.2-alpha\build\Accord.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Accord.3.8.2-alpha\build\Accord.targets'))" />
-  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
@@ -158,4 +221,8 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
 </Project>
