--- a/Quartz.XP/Quartz.XP/Quartz.XP.csproj
+++ b/Quartz.XP/Quartz.XP/Quartz.XP.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Badge.cs" />
     <Compile Include="Models\Bundle.cs" />
     <Compile Include="Models\Cell.cs" />
     <Compile Include="Models\Poem.cs" />
