--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,6 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+Quartz.XP/Quartz.XP/Data/Quartz.db
+Quartz.XP/Quartz.XP/Data/Quartz.db
