--- a/Quartz.XP/Quartz.XP/packages.config
+++ b/Quartz.XP/Quartz.XP/packages.config
@@ -3,4 +3,5 @@
   <package id="ILMerge" version="2.14.1208" targetFramework="net40-Client" />
   <package id="LiteDB" version="3.1.5" targetFramework="net40-Client" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40-Client" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net40-Client" />
 </packages>
